config page created

--- a/config.html
+++ b/config.html
@@ -9,8 +9,8 @@
 </head>
 
 <body>
-  <div id="root" data-tauri-drag-region></div>
-  <script type="module" src="/src/pages/main.tsx"></script>
+  <div id="root"></div>
+  <script type="module" src="/src/pages/config.tsx"></script>
 </body>
 
 </html>
